Entrega de Proyecto

--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,12 @@
       <h1 class="title"> YO TE CREO</h1>
       <p class="subtitle">Denuncia Seguro(a)</p>
       <h3> 
-        ¿Te encuentras en una situación de violencia con tu pareja?
+        ¿Te encuentras en una situación de violencia con tu pareja o haz sido testigo?
       </h3>
       <h3>
-        Realiza tu denuncia, entregando datos relevantes de manera anónima y segura.
+        Realiza tu denuncia entregando datos relevantes de manera anónima y segura.
       </h3>
-     <h3>Aceptas el amor que crees merecer</h3>
+     <h3>Acepta el amor que crees merecer.</h3>
     </div>
 
     <!--Zona de ingreso/egreso de texto-->
@@ -27,7 +27,7 @@
 
     <!-- Zona de Offset-->
     <div id="set">
-      <p class="titleOffset">Nivel de Seguridad para tu mensaje</p>
+      <p class="titleOffset">Nivel de Seguridad para tu denuncia</p>
       <input id="offSet" min="1" type="number" placeholder=" Ej: 1"/>
     </div>
 
