actualización de Readme, comentarios y sugerencias de usuarios

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <h1 class="title"> YO TE CREO</h1>
       <p class="subtitle">Denuncia Seguro(a)</p>
       <h3> 
-        ¿Te encuentras en una situación de violencia con tu pareja o haz sido testigo?
+       ¿Te encuentras en una situación de violencia con tu pareja?  o  ¿Conoces a alguien que esté pasando por esta situación?
       </h3>
       <h3>
         Realiza tu denuncia entregando datos relevantes de manera anónima y segura.
@@ -27,7 +27,7 @@
 
     <!-- Zona de Offset-->
     <div id="set">
-      <p class="titleOffset">Nivel de Seguridad para tu denuncia</p>
+      <p class="titleOffset">Nivel de Seguridad para tu Denuncia</p>
       <input id="offSet" min="1" type="number" placeholder=" Ej: 1"/>
     </div>
 
